Fix button stacking instead of spacing

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -3,17 +3,11 @@
 @tailwind utilities;
 
 button {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    padding: 4px;
-    border-radius: 8px;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    transition-duration: 0.4s;
-  }
-  
+  padding: 4px;
+  border-radius: 8px;
+}
+
 button:hover {
-background-color: rgba(200, 200, 200, 0.219); /* Green */
-color: white;
+  background-color: rgba(200, 200, 200, 0.219); /* Green */
+  color: white;
 }
